# deltatech_service

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  .pylintrc  .pylintrc-mandatory  .ruff.toml  README.md  gen_addon_readme.rst.jinja  mig_module.sh  oca_dependencies.txt  requirements.txt  update_readme.sh
deltatech_category_group_equipment/: README.rst  __manifest__.py  pyproject.toml
deltatech_category_group_equipment/readme/: DESCRIPTION.md
deltatech_category_group_equipment/static/description/: index.html
deltatech_category_group_equipment/views/: service_equipment.xml
deltatech_object_history/: README.rst  __manifest__.py  pyproject.toml
deltatech_object_history_service/: README.rst  __manifest__.py  pyproject.toml
deltatech_project_task_travel/: __manifest__.py
deltatech_property/: README.rst  __manifest__.py  pyproject.toml
deltatech_property_agreement/: README.rst  __manifest__.py  pyproject.toml
deltatech_service/: README.rst  __manifest__.py  pyproject.toml
deltatech_service_agreement/: README.rst  __manifest__.py  pyproject.toml
deltatech_service_base/: README.rst  (+2 more)
deltatech_service_consumable/: README.rst  __manifest__.py  pyproject.toml
deltatech_service_consumable/models/: service_agreement.py  service_consumable.py  service_efficiency_report.py  service_equipment.py  stock_picking.py
deltatech_service_consumable/static/description/: banner.json  index.html
deltatech_service_consumable/tests/: test_equipment.py
deltatech_service_consumable/views/: service_efficiency_report.xml  service_equipment_view.xml
(+165 files in other folders)
