[build-system]
requires = [
    "whool",
]
build-backend = "whool.buildapi"

[project]
name = "odoo-addon-deltatech-service-consumable"

dependencies = [
    "odoo-addon-deltatech-product-extension @ git+https://github.com/dhongu/deltatech.git@19.0#subdirectory=deltatech_product_extension",
    "odoo-addon-deltatech-stock-report @ git+https://github.com/dhongu/deltatech.git@19.0#subdirectory=deltatech_stock_report",
]
